--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -26,6 +26,12 @@ jobs:
           npm config set registry https://registry.npmjs.org/
           npm config delete //registry.npmjs.org/:_authToken || true
           npm config list
+      - name: Ensure devDependencies are installed
+        run: |
+          echo "NODE_ENV=${NODE_ENV:-}"
+          echo "NPM_CONFIG_PRODUCTION=${NPM_CONFIG_PRODUCTION:-}"
+          npm config set production false
+          npm config list
       - name: Install dependencies
         run: npm ci --include=dev --no-audit --no-fund
       - name: Debug npm config on failure
@@ -33,5 +39,9 @@ jobs:
         run: |
           npm config list
           npm ping
+      - name: Verify nyc is available
+        run: |
+          test -x node_modules/.bin/nyc
+          node_modules/.bin/nyc --version
       - name: Test
         run: npm test
