--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -31,6 +31,11 @@ jobs:
       - name: Install dependencies
         run: |
           npm ci --include=dev --no-audit --no-fund
+      - name: Verify nyc is installed
+        run: |
+          npm ls nyc || true
+          ls -la node_modules/.bin | sed -n '1,200p'
+          test -x node_modules/.bin/nyc && echo "nyc bin exists" || (echo "nyc bin missing" && exit 1)
       - name: Debug npm config on failure
         if: failure()
         run: |
