--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -28,6 +28,8 @@ jobs:
           npm -v
           echo "NODE_ENV=$NODE_ENV"
           npm config get omit
+      - name: Ensure npm bin links are enabled
+        run: npm config set bin-links true
       - name: Install dependencies
         run: |
           npm ci --include=dev --no-audit --no-fund
