--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
   "devDependencies": {
     "c8": "^10.1.3",
     "coveralls-next": "^6.0.1",
-    "mocha": "^10.5.0"
+    "mocha": "^11.7.5"
+  },
+  "overrides": {
+    "glob": "13.0.1"
   }
 }
