--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -24,5 +24,14 @@ jobs:
       - name: Install dependencies
         run: |
           npm ci --include=dev --no-audit --no-fund
+      - name: Audit dependencies
+        continue-on-error: true
+        run: |
+          npm audit --json > npm-audit.json
+      - name: Upload npm audit report
+        uses: actions/upload-artifact@v4
+        with:
+          name: npm-audit-report
+          path: npm-audit.json
       - name: Test
         run: npm test
